--- a/package.json
+++ b/package.json
@@ -42,5 +42,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://myusername.github.io/mui-portfolio"
+  "homepage": "https://sjlevalley.github.io/mui-portfolio"
 }
